--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   <link href = "// db.onlinewebfonts.com/c/467db3db8bba3d61aadf768f979d8fb9?family=Adlery+Pro" rel = "stylesheet" type = "text / css" />
-  <link rel="stylesheet" href="css/index.css">
-  <script src="js/index.js"></script>
+  <link rel="stylesheet" href="index.css">
+  <script src="index.js"></script>
   <title>SiteByOrder</title>
 </head>
 <body>
