--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       </ul>
     </nav>
     <h1 id="slougan">Faça pedido do seu site por um peço que cabe no seu bouço, com entrega em até 5 dias!</h1>
+    <li><a href="#"><button id="button-start">Vamos lá !</button></a></li>
   </header>
 </body>
 </html>
