--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         <li class="options-menu"><a href="#"><button>Contact</button></a></li>
       </ul>
     </nav>
-    <h1 id="slougan">Faça pedido do seu site por um peço que cabe no seu bouço, com entrega em até 5 dias!</h1>
+    <div id="card-principal">
+      <li><h1 id="slougan">Faça pedido do seu site por um peço que cabe no seu bouço, com entrega em até 5 dias!</h1></li>
+      <li><img src=""/></li>
+    </div>
     <li><a href="#"><button id="button-start">Vamos lá !</button></a></li>
   </header>
 </body>
